--- a/BasicEDA_ShowTell.ipynb
+++ b/BasicEDA_ShowTell.ipynb
@@ -6,7 +6,7 @@
       "name": "BasicEDA_ShowTell.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPdNZ1hHb9T2qGx7oFPz86l"
+      "authorship_tag": "ABX9TyP8gvVzNwC3BLd+LPhN2DFa"
     },
     "kernelspec": {
       "name": "python3",
@@ -83,14 +83,14 @@
       "metadata": {
         "id": "uRgm_dzKQfBt",
         "colab_type": "code",
-        "outputId": "19ddc0e3-daa2-4067-889b-00818b48ed8e",
+        "outputId": "246f0cb8-ac99-4c68-d7fb-56b38e9357cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 538
         }
       },
       "source": [
-        "df=pd.read_csv(\"train.csv\",\n",
+        "df=pd.read_csv(\"/content/drive/My Drive/Lavoro/Dazn/Show&Tell/EDA(Matplotlib,Sns,Pandas)/Basic/Copia di train.csv\",\n",
         "               sep=',',\n",
         "               index_col='PassengerId')\n",
         "print('Columns :{}'.format(df.columns))\n",
@@ -101,7 +101,7 @@
         "print('Check null for each column')\n",
         "print(df.isnull().sum())"
       ],
-      "execution_count": 40,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,6 +1152,7 @@
         }
       },
       "source": [
+        "#multiple conditions\n",
         "df[(df['Age'].isnull()==False) & (df['Pclass']==1)]"
       ],
       "execution_count": 16,
